--- a/ansible_playbook.yml
+++ b/ansible_playbook.yml
@@ -8,7 +8,7 @@
           - msal
           - requests
         state: present
-      become: yes
+        executable: pip3 
     - name: Check if user exists
       shell: python3 Azure_Python.py check_user '{{ "Abhishek.U@amitomar63gmail.onmicrosoft.com" }}'
       register: user_exists
