--- a/Playbook_Ansible.yml
+++ b/Playbook_Ansible.yml
@@ -1,3 +1,7 @@
+---
+- hosts: all
+  collections:
+    - community.windows
 - name: Check if a user exists in Azure AD
   hosts: localhost
   connection: local
