--- a/Playbook_Ansible.yml
+++ b/Playbook_Ansible.yml
@@ -1,18 +1,49 @@
----
-- hosts: all
-  collections:
-    - community.windows
-- name: Check if a user exists in Azure AD
+- name: Azure AD Automation using Ansible
   hosts: localhost
   connection: local
+  gather_facts: no
+ 
+  vars:
+    graph_api_url: "https://graph.microsoft.com/v1.0"
+ 
   tasks:
-    - name: Get user details
-        client_id: "{{ client_id }}"
-        secret: "{{ secret') }}"
-        tenant: "{{ tenant }}"
-        object_id: "user@example.com"
-      register: user_info
+    - name: Get Access Token
+      uri:
+        url: "https://login.microsoftonline.com/{{ tenant_id }}/oauth2/v2.0/token"
+        method: POST
+        headers:
+          Content-Type: "application/x-www-form-urlencoded"
+        body:
+          client_id: "{{ client_id }}"
+          client_secret: "{{ client_secret }}"
+          scope: "https://graph.microsoft.com/.default"
+          grant_type: "client_credentials"
+        body_format: form-urlencoded
+        return_content: yes
+      register: token_response
+      failed_when: token_response.status != 200
+    - name: Set access token fact
+      set_fact:
+        access_token: "{{ token_response.json.access_token }}"
+      when: token_response.status == 200
 
-    - debug:
-        var: user_info
+    - name: Disable Azure AD User Account
+      uri:
+        url: "{{ graph_api_url }}/users/{{ Jayanta.Banerjee@amitomar63gmail.onmicrosoft.com }}"
+        method: PATCH
+        headers:
+          Authorization: "Bearer {{ access_token }}"
+          Content-Type: "application/json"
+        body:
+          {
+            "accountEnabled": false
+          }
+        body_format: json
+        return_content: yes
+      register: disable_user_response
+     
+    - name: Debug - Show Disable User Account Response
+      debug:
+        msg: "Disable User Account: {{ 'Successful' if disable_user_response.status == 204 else 'Failed' }}"
+
 
